# Super-2024-Swadge-FW

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  assets.conf  attract_2048_3.csv  attract_bigbug1.csv  attract_bigbug2.csv  attract_chowa.csv  attract_magfest.csv  attract_sh2.csv  attract_song1.csv  attract_uttt1.csv  cmds.lldb  makefile  partitions.csv  sdkconfig  sdkconfig.defaults
components/hdw-spiffs/: CMakeLists.txt  hdw-spiffs.c  heatshrink_decoder.c  spiffs_font.c  spiffs_json.c  spiffs_sng.c  spiffs_txt.c  spiffs_wsg.c
components/hdw-spiffs/include/: hdw-spiffs.h  heatshrink_decoder.h  spiffs_font.h  spiffs_wsg.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  modeIncludeList.c  modeIncludeList.h  swadge.c  swadge.h  swadge2024.c  swadge2024.h  swadgeMode.h  swadge_gpio.h
main/asset_loaders/: fs_font.c  fs_font.h  fs_json.c  fs_json.h  fs_model.c  fs_txt.c  fs_txt.h  fs_wsg.c  fs_wsg.h  heatshrink_config.h  heatshrink_decoder.c  heatshrink_decoder.h  heatshrink_helper.c  heatshrink_helper.h  spiffs_font.c  spiffs_font.h  spiffs_json.c  spiffs_json.h  spiffs_model.c  spiffs_model.h  spiffs_rmh.c  spiffs_rmh.h  spiffs_sng.c  spiffs_sng.h  spiffs_song.c  spiffs_song.h  spiffs_txt.c  spiffs_txt.h  spiffs_wsg.c  spiffs_wsg.h
main/asset_loaders/common/: heatshrink_common.h  heatshrink_config.h  heatshrink_encoder.c  heatshrink_encoder.h
main/colorchord/: DFT32.c  DFT32.h  ccconfig.h  embeddednf.c  embeddednf.h  embeddedout.c  embeddedout.h
main/cutscene/: cutscene.c  cutscene.h
main/display/: bresenham.c  bresenham.h  cndraw.c  cndraw.h  fill.c  fill.h  font.c  font.h  model.c  model.h  shapes.c  shapes.h  wsg.c  wsg.h  wsgCanvas.c  wsgCanvas.h  wsgPalette.c  wsgPalette.h
main/display/ThreeDEngine/: 3dEngine.c  3dEngine.h  3dPrimitives.h
main/menu/: menu.c  menu.h  menuLogbookRenderer.c  menuLogbookRenderer.h  menuManiaRenderer.c  menuManiaRenderer.h  menuMegaRenderer.c  menuMegaRenderer.h  menuRenderer.c  menuRenderer.h  menuSimpleRenderer.c  menuSimpleRenderer.h  menu_utils.c  menu_utils.h
main/midi/: bakedDrums.c  drums.c  drums.h  midiData.c  midiData.h  midiEsp.c  midiFileParser.c  midiFileParser.h  midiNoteFreqs.h  midiPlayer.c  midiPlayer.h  midiUsb.c  midiUsb.h  midiUtil.c  midiUtil.h  waveTables.c  waveTables.h
main/modes/TicTacToe/: TicTacToe.c  TicTacToe.h
main/modes/accelTest/: accelTest.c  accelTest.h  bunny.h
main/modes/breakout/: aabb_utils.c  aabb_utils.h  breakout.c  breakout.h  breakout_typedef.h  common_typedef.h  entity.c  entity.h  entityManager.c  entityManager.h  gameData.c  gameData.h  leveldef.h  soundManager.c  soundManager.h  sprite.h  starfield.c  starfield.h  tilemap.c  tilemap.h
main/modes/colorchord/: colorchord.c  colorchord.h  colorchordTypes.h  mode_colorchord.c  mode_colorchord.h  mode_colorchord_types.h
main/modes/credits/: credits_utils.c  credits_utils.h  mode_credits.c  mode_credits.h
main/modes/dance/: dance.c  mode_dance.c  mode_dance.h  portable_dance.c  portable_dance.h
main/modes/demo/: demoMode.c  demoMode.h
main/modes/dice/: modeDice.c  modeDice.h
main/modes/factoryTest/: factoryTest.c  factoryTest.h
main/modes/flight/: 3denv.h  flight.c  flight.h
main/modes/gamepad/: gamepad.c  gamepad.h
main/modes/graphicsTest/: graphicsTest.c
main/modes/intro/: introMode.c  introMode.h  tutorial.h
main/modes/jukebox/: bananaphone.h  jukebox.c  jukebox.h
main/modes/lumberjack/: lumberjack.c  lumberjack.h  lumberjackEntity.c  lumberjackEntity.h  lumberjackGame.c  lumberjackGame.h  lumberjackPlayer.c  lumberjackPlayer.h  lumberjack_types.h
main/modes/mainMenu/: mainMenu.c  mainMenu.h
main/modes/marbles/: marbles.c  marbles.h
main/modes/mfpaint/: mode_paint.c  paint_browser.c  paint_browser.h  paint_brush.c  paint_brush.h  paint_canvas.c  paint_canvas.h  paint_common.c  paint_common.h  paint_draw.c  paint_draw.h  paint_gallery.c  paint_gallery.h  paint_help.c  paint_help.h  paint_nvs.c  paint_nvs.h  paint_share.c  paint_share.h  paint_song.c  paint_song.h  paint_type.h  paint_ui.c  paint_ui.h  paint_util.c  paint_util.h  px_stack.c  px_stack.h  wheel_menu.c  wheel_menu.h
main/modes/pinball/: mode_pinball.c  mode_pinball.h  pinball_draw.c  pinball_physics.c  pinball_physics.h  pinball_test.c  pinball_test.h  pinball_zones.c
main/modes/platformer/: mode_platformer.c  mode_platformer.h  plEntity.c  plEntity.h  plEntityManager.c  plEntityManager.h  plGameData.c  plGameData.h  plLeveldef.h  plSoundManager.c  plSoundManager.h  plTilemap.c  plTilemap.h  platformer_typedef.h
main/modes/pong/: pong.c  pong.h
main/modes/pushy/: pushy.c
main/modes/quickSettings/: menuQuickSettingsRenderer.c  menuQuickSettingsRenderer.h  quickSettings.c  quickSettings.h
main/modes/ray/: fp_math.c  fp_math.h  mode_ray.c  mode_ray.h  ray_credits.c  ray_credits.h  ray_death_screen.c  ray_death_screen.h  ray_dialog.c  ray_dialog.h  ray_map.c  ray_map.h  ray_map_loader.c  ray_map_loader.h  ray_object.c  ray_object.h  ray_pause.c  ray_pause.h  ray_player.c  ray_player.h  ray_renderer.c  ray_renderer.h  ray_script.c  ray_script.h  ray_tex_manager.c  ray_tex_manager.h  ray_warp_screen.c
main/modes/ringsAndGems/: ringsAndGems.c
main/modes/shooter/: mode_shooter.c  mode_shooter.h
main/modes/slideWhistle/: slideWhistle.c
main/modes/small3dMode/: small3dMode.c
main/modes/soko/: soko.c  soko.h  soko_consts.h  soko_game.c  soko_game.h  soko_gamerules.c  soko_gamerules.h  soko_input.c  soko_input.h
main/utils/: buttonUtils.c  buttonUtils.h  circular_buffer.c  circular_buffer.h  cnfs.c  cnfs.h  cnfs_image.h  color_utils.c  color_utils.h  coreutil.h  dialogBox.c  dialogBox.h  drums.c  fp_math.c  fp_math.h  geometry.c  geometry.h  hashMap.c  hashMap.h  helpPages.c  helpPages.h  highScores.c  highScores.h  imu_utils.c  imu_utils.h  linked_list.c  linked_list.h  macros.h  matrixMath.c  matrixMath.h  midiPlayer.c  midiPlayer.h  nameList.c  nameList.h  nvs_utils.c  nvs_utils.h  p2pConnection.c  p2pConnection.h  settingsManager.c  settingsManager.h  (+27 more)
(+2179 files in other folders)
